# fastAPI-integration-coin

./: .env  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  schemas.py  services.py  views.py
database/: connection.py  init_db.py  models.py
