[tool.poetry]
name = "fastapi-integration-coin"
version = "0.1.0"
description = ""
authors = ["igorsenna <engenheirostrauss2@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_integration_coin"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.5.post1"
asyncpg = "^0.27.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
